--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@material/checkbox": "^13.0.0",
     "keycloak-angular": "^8.3.0",
     "keycloak-js": "^14.0.0",
     "rxjs": "~6.6.0",
