--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,4 +2,6 @@ Django==3.2.4
 django-filter==2.4.0
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
+djangorestframework-jwt==1.11.0
 Markdown==3.3.4
+six==1.14.0
