--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^6.0.3",
+    "@angular-material-components/moment-adapter": "^6.0.0",
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.2.4",
     "@angular/common": "~12.2.0",
@@ -17,13 +19,17 @@
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
     "@angular/material": "^12.2.4",
+    "@angular/material-moment-adapter": "^12.2.12",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@material-ui/pickers": "^3.3.10",
     "@material/checkbox": "^13.0.0",
     "keycloak-angular": "^8.3.0",
     "keycloak-js": "^14.0.0",
-    "rxjs": "~6.6.0",
+    "material": "^0.4.3",
+    "moment": "^2.29.1",
+    "rxjs": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
