--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -34,7 +34,8 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "@angular-eslint/no-empty-lifecycle-method": "off"
       }
     },
     {
@@ -44,7 +45,7 @@
       "extends": [
         "plugin:@angular-eslint/template/recommended"
       ],
-      "rules": {}
+      "rules": { }
     }
   ]
 }
