--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Parkplatzverwaltung": {
+    "parkplatzverwaltung": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -21,7 +21,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Parkplatzverwaltung",
+            "outputPath": "dist/parkplatzverwaltung",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -74,10 +74,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "Parkplatzverwaltung:build:production"
+              "browserTarget": "parkplatzverwaltung:build:production"
             },
             "development": {
-              "browserTarget": "Parkplatzverwaltung:build:development"
+              "browserTarget": "parkplatzverwaltung:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -85,7 +85,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Parkplatzverwaltung:build"
+            "browserTarget": "parkplatzverwaltung:build"
           }
         },
         "test": {
@@ -119,7 +119,7 @@
       }
     }
   },
-  "defaultProject": "Parkplatzverwaltung",
+  "defaultProject": "parkplatzverwaltung",
   "cli": {
     "defaultCollection": "@angular-eslint/schematics"
   }
