--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -5,9 +5,9 @@
   },
   "extends": [
     "airbnb-base",
-    "plugin:@typescript-eslint/recommended",
+    "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "eslint:recommended"
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -27,6 +27,7 @@
     "lines-between-class-members": "off",
     "import/prefer-default-export": "off",
     "no-underscore-dangle": "off",
+    "no-useless-constructor": "off",
     "import/no-unresolved": "off",
     "import/extensions": "off",
     "@typescript-eslint/ban-ts-comment": "off",
