Cypess test erweitert

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "cypress": "^9.1.0",
+    "cypress-plugin-tab": "^1.0.5",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
